--- a/frontend/src/app/libs/code-editors/monaco-editor/monaco-editor.component.html
+++ b/frontend/src/app/libs/code-editors/monaco-editor/monaco-editor.component.html
@@ -1,1 +1,3 @@
-<div class="editor-container" #editorContainer></div>
+<div class="editor-container" #editorContainer>
+  <div class="editor-container__label">{{ 'TASK-CREATION.CODE_EDITOR_LABEL' | translate }}</div>
+</div>
