--- a/frontend/src/app/libs/common-components/components/input/input.theme.scss
+++ b/frontend/src/app/libs/common-components/components/input/input.theme.scss
@@ -19,9 +19,27 @@
     padding: .7rem 0;
   }
 
-  &.no-paddings  .mat-form-field-wrapper {
-    padding-bottom: 0;
-    margin: 0;
+  &.no-paddings  {
+    .mat-form-field-wrapper {
+      padding-bottom: 0;
+      margin: 0;
+    }
+
+    .mat-form-field-infix {
+      border-top: 0;
+    }
+
+    input.mat-input-element {
+      margin-top: 0;
+    }
+
+    .mat-form-field-outline {
+      top: 0;
+    }
+
+    .mat-form-field-flex {
+      margin-top: 0;
+    }
   }
 
   &.input--dark .mat-form-field-outline {
