--- a/frontend/src/app/libs/common-components/components/tab-navigation/tab-navigation.component.html
+++ b/frontend/src/app/libs/common-components/components/tab-navigation/tab-navigation.component.html
@@ -1,6 +1,6 @@
 <div class="app-tab-navigation__block" [class.app-tab-navigation__block--active]="generalTab"
-	 (click)="changePage('generalTab')">GENERAL</div>
+	 (click)="changePage(tabsEnum.generalTab)">GENERAL</div>
 <div class="app-tab-navigation__block"
-	 (click)="changePage('tasksTab')" [class.app-tab-navigation__block--active]="tasksTab">TASKS (8)</div>
+	 (click)="changePage(tabsEnum.tasksTab)" [class.app-tab-navigation__block--active]="tasksTab">TASKS (8)</div>
 <div class="app-tab-navigation__block"
-	 (click)="changePage('invitationsTab')" [class.app-tab-navigation__block--active]="invitationsTab">INVITATIONS (0)</div>
+	 (click)="changePage(tabsEnum.invitationsTab)" [class.app-tab-navigation__block--active]="invitationsTab">INVITATIONS (0)</div>
