--- a/frontend/src/app/libs/common-components/shared/variables.scss
+++ b/frontend/src/app/libs/common-components/shared/variables.scss
@@ -85,6 +85,9 @@ $color-white-50: rgba($color-white, .50);
 $color-white-30: rgba($color-white, .30);
 $color-white-10: rgba($color-white, .10);
 $color-white-5: rgba($color-white, .05);
+
+$color-gray-01: rgba(33, 33, 33, 0.1);
+$color-gray-05: rgba(33, 33, 33, 0.5);
 // typography
 $font-main-bold: 'Roboto Bold', sans-serif;
 $font-main-regular: 'Roboto Regular', sans-serif;
