--- a/frontend/src/app/libs/auth-pages/sign-in/sign-in.component.scss
+++ b/frontend/src/app/libs/auth-pages/sign-in/sign-in.component.scss
@@ -96,6 +96,18 @@
 		color: $color-white-50;
 		margin: $layout-gutter;
 	}
+
+	&__form{
+		width: 100%;
+	}
+
+	&__input-email {
+		width: 100%;
+	}
+
+	&__input-password {
+		width: 100%;
+	}
 }
 
 ::ng-deep {
@@ -110,7 +122,7 @@
 		-webkit-text-fill-color: white !important;
 	}
 	.mat-form-field {
-		width: 390px !important;
+		//width: 390px !important;
 	}
 	.mat-button,
 	.mat-flat-button {
