--- a/frontend/src/app/libs/common-components/components/select/select.component.html
+++ b/frontend/src/app/libs/common-components/components/select/select.component.html
@@ -8,8 +8,10 @@
 		<mat-select [formControl]="formControl"
 					disableOptionCentering
 					(openedChange)="openedChange($event)">
-			<mat-option *ngFor="let option of generateTime();"
-						[value]="option">{{option}}</mat-option>
+        <mat-option *ngFor="let option of options"
+                    [value]="option.value">
+          {{ option.label }}
+        </mat-option>
 		</mat-select>
 	</mat-form-field>
 </div>
