--- a/frontend/src/app/libs/common-components/components/tab-navigation/tab-navigation.component.html
+++ b/frontend/src/app/libs/common-components/components/tab-navigation/tab-navigation.component.html
@@ -1,9 +1,6 @@
-<div *ngFor="let tab of tabs" 
-			class="app-tab-navigation__block"
-			[class.app-tab-navigation__block--active]="currentTab?.title === tab.title"
-			(click)="changePage(tab)">
-	{{ tab.title | uppercase }}
-	<span *ngIf="tab.amount !== null">
-		({{tab?.amount}})
-	</span>
-</div>
+<div class="app-tab-navigation__block" [class.app-tab-navigation__block--active]="generalTab"
+	 (click)="changePage(tabsEnum.generalTab)">GENERAL</div>
+<div class="app-tab-navigation__block"
+	 (click)="changePage(tabsEnum.tasksTab)" [class.app-tab-navigation__block--active]="tasksTab">TASKS ({{ tasksNumber }})</div>
+<div class="app-tab-navigation__block"
+	 (click)="changePage(tabsEnum.invitationsTab)" [class.app-tab-navigation__block--active]="invitationsTab">INVITATIONS (0)</div>
