--- a/frontend/src/app/libs/auth-pages/sign-up/sign-up.component.html
+++ b/frontend/src/app/libs/auth-pages/sign-up/sign-up.component.html
@@ -1,47 +1,80 @@
 <div class="sign-up-page">
 	<div class="sign-up-page__container-img">
-		<img src="assets/images/authorization-bg.svg" alt="authorization" class="sign-up-page__img" />
-		<img src="assets/images/logo-dark.svg" alt="logo-dark" class="sign-up-page__logo" />
+		<img src="assets/images/authorization-bg.svg"
+			alt="authorization"
+			class="sign-up-page__img"/>
+		<img src="assets/images/logo-dark.svg"
+			alt="logo-dark"
+			class="sign-up-page__logo"/>
 	</div>
 	<div class="sign-up-page__container-page">
 		<div class="sign-up-page__header">
 			<span class="sign-up-page__link-sign-up sign-up-page__link-sign-up--white">
-				{{ "SIGN_UP.HAS_ACCOUNT" | translate }}</span>
+				{{ "SIGN_UP.HAS_ACCOUNT" | translate }}
+			</span>
 			<a (click)="onSignIn()"
-				class="sign-up-page__link-sign-up sign-up-page__link-sign-up--blue">{{ "SIGN_UP.SIGN_IN_BTN" | translate }}</a>
+				class="sign-up-page__link-sign-up sign-up-page__link-sign-up--blue">
+					{{ "SIGN_UP.SIGN_IN_BTN" | translate }}
+			</a>
 		</div>
 		<div class="sign-up-page__container-form">
 			<h2 class="sign-up-page__link-welcomeBack">
 				{{ "SIGN_UP.CREATE_ACCOUNT" | translate }}
 			</h2>
-
-			<div (click)="onGitHubSignInClicked()" class="sign-up-page__icon">
-				<img src="assets/images/social-media/github.svg" alt="gitHub-icon" />
+			<div (click)="onGitHubSignInClicked()"
+				class="sign-up-page__icon">
+				<img src="assets/images/social-media/github.svg"
+					alt="gitHub-icon"/>
 			</div>
-
 			<div class="sign-up-page__container-divider">
 				<div class="sign-up-page__divider"></div>
-				<p class="sign-up-page__or">{{ "SIGN_UP.OR" | translate }}</p>
+				<p class="sign-up-page__or">
+					{{ "SIGN_UP.OR" | translate }}
+				</p>
 				<div class="sign-up-page__divider"></div>
 			</div>
-			<form [formGroup]="signUpFormGroup" (ngSubmit)="submit()" class="sign-up-page__form">
+			<form [formGroup]="signUpFormGroup"
+				(ngSubmit)="submit()"
+				class="sign-up-page__form">
                 <div class="sign-up-page__inputs-name-container">
                     <div class="sign-up-page__input-first-name-container">
-                        <app-input class="sign-up-page__input-first-name" [theme]="darkTheme" [inputValidators]="textSyncValidators" [type]="'text'" [label]="'First Name'" [placeholder]="'First Name'" formControlName="firstName"></app-input>
+                        <app-input class="sign-up-page__input-first-name"
+							[theme]="darkTheme"
+							[inputValidators]="textSyncValidators"
+							[type]="'text'"
+							[label]="'First Name'"
+							[placeholder]="'First Name'"
+							formControlName="firstName">
+						</app-input>
                     </div>
                     <div class="sign-up-page__input-last-name-container">
-                        <app-input class="sign-up-page__input-last-name" [theme]="darkTheme" [inputValidators]="textSyncValidators" [type]="'text'" [label]="'Last Name'" [placeholder]="'Last Name'" formControlName="secondName"></app-input>
+                        <app-input class="sign-up-page__input-last-name"
+							[theme]="darkTheme"
+							[inputValidators]="textSyncValidators"
+							[type]="'text'"
+							[label]="'Last Name'"
+							[placeholder]="'Last Name'"
+							formControlName="secondName">
+						</app-input>
                     </div>
                 </div>
 				<div class="sign-up-page__container-input-big">
-					<app-input [inputValidators]="emailValidators" [theme]="darkTheme"
-						[label]="'SIGN_UP.EMAIL' | translate" [type]="'email'" [placeholder]="'pat@example.com'"
-						formControlName="email" class="sign-up-page__input-email"></app-input>
+					<app-input [inputValidators]="emailValidators"
+						[theme]="darkTheme"
+						[label]="'SIGN_UP.EMAIL' | translate"
+						[type]="'email'"
+						[placeholder]="'pat@example.com'"
+						formControlName="email"
+						class="sign-up-page__input-email">
+					</app-input>
 				</div>
-
 				<div>
-					<app-input [theme]="darkTheme" [inputValidators]="passwordValidators" [type]="'password'"
-						[label]="'SIGN_UP.PASSWORD' | translate" [secured]="false" formControlName="password"
+					<app-input [theme]="darkTheme"
+						[inputValidators]="passwordValidators"
+						[type]="'password'"
+						[label]="'SIGN_UP.PASSWORD' | translate"
+						[secured]="passwordIconVisibility"
+						formControlName="password"
 						class="sign-up-page__input-password">
 					</app-input>
                 </div>                
@@ -56,13 +89,14 @@
                         formControlName="mobilePhone"
                         [prefix]="'+375'"
                         [mask]="'(00)-000-00-00'"
-                        class="sign-up-page__input-mobile"></app-input>
+                        class="sign-up-page__input-mobile">
+					</app-input>
                 </div>
-
 				<div class="sign-up-page__btn">
-					<app-button type="flat" [theme]="darkTheme">{{
-            "SIGN_UP.SIGN_UP_BTN" | translate
-          }}</app-button>
+					<app-button type="flat"
+						[theme]="darkTheme">
+						{{"SIGN_UP.SIGN_UP_BTN" | translate}}
+					</app-button>
 				</div>
 			</form>
 			<mat-error *ngIf="authError">{{ authError }}</mat-error>
