refactor: task creator

--- a/frontend/src/app/libs/common-components/components/icon/icon.component.html
+++ b/frontend/src/app/libs/common-components/components/icon/icon.component.html
@@ -1,5 +1,6 @@
 <mat-icon
 	*ngIf="icon"
-	class="icon icon--{{size}}">
+	class="icon icon--{{size}}"
+  [ngStyle]="{ 'color' : color }">
 		{{icon}}
 </mat-icon>
