--- a/frontend/src/app/libs/common-components/components/icon-button/icon-button.component.html
+++ b/frontend/src/app/libs/common-components/components/icon-button/icon-button.component.html
@@ -1,11 +1,11 @@
-<app-button class="icon-button" [type]="type" [theme]="theme">
+<app-button class="button_icon" [type]="type" [theme]="theme" [iconButton]="true">
 
-	<app-icon *ngIf="startIcon" class="icon-button__icon" [icon]="startIcon" [size]="iconSize"></app-icon>
+	<app-icon *ngIf="startIcon" class="icon-button__icon" [icon]="startIcon" [size]="iconSize" [color]="iconColor"></app-icon>
 
 	<span class="icon-button__text">
 		<ng-content></ng-content>
 	</span>
 
-	<app-icon *ngIf="endIcon" class="icon-button__icon" [icon]="endIcon" [size]="iconSize"></app-icon>
+	<app-icon *ngIf="endIcon" class="icon-button__icon" [icon]="endIcon" [size]="iconSize" [color]="iconColor"></app-icon>
 
 </app-button>
