--- a/frontend/src/app/libs/event-creation/tasks-creator-page/tasks-creator-page.component.html
+++ b/frontend/src/app/libs/event-creation/tasks-creator-page/tasks-creator-page.component.html
@@ -6,6 +6,7 @@
   <app-tasks-creator
     class="tasks-creator-tab__creator"
     (passForm)="passForm.emit($event)"
+    (removeTask)="removeTask.emit($event)"
     [selectedTask]="selectedTask">
   </app-tasks-creator>
 </div>
