fix: task creator name control

--- a/frontend/src/app/libs/common-components/components/input/input.component.html
+++ b/frontend/src/app/libs/common-components/components/input/input.component.html
@@ -14,7 +14,9 @@
 		[type]="inputType"
 		(change)="onValueChange($event.target.value)"
 		(blur)="onTouched()"
-		placeholder={{placeholder}} prefix={{prefix}} mask={{mask}}>
+		placeholder="{{ placeholder }}"
+    prefix="{{ prefix }}"
+    mask="{{ mask }}">
 
 	<mat-error *ngFor="let error of errorsArray">
 		{{error}}
